@@ -18,47 +18,55 @@ package com.echothree.control.user.core.server.command;
 
 import com.echothree.control.user.core.common.form.GetTextTransformationsForm;
 import com.echothree.control.user.core.common.result.CoreResultFactory;
-import com.echothree.control.user.core.common.result.GetTextTransformationsResult;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.core.server.entity.TextTransformation;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.model.data.user.server.entity.UserVisit;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetTextTransformationsCommand
-        extends BaseMultipleEntitiesCommand<TextTransformation, GetTextTransformationsForm> {
-    
+        extends BasePaginatedMultipleEntitiesCommand<TextTransformation, GetTextTransformationsForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                        new SecurityRoleDefinition(SecurityRoleGroups.TextTransformation.name(), SecurityRoles.List.name())
-                        )))
-                )));
-        
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.TextTransformation.name(), SecurityRoles.List.name()
+                        )
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetTextTransformationsCommand */
     public GetTextTransformationsCommand(UserVisitPK userVisitPK, GetTextTransformationsForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
+    @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var coreControl = getCoreControl();
+
+        return coreControl.countTextTransformations();
+    }
+
     @Override
     protected Collection<TextTransformation> getEntities() {
         var coreControl = getCoreControl();
@@ -68,9 +76,9 @@ public class GetTextTransformationsCommand
     
     @Override
     protected BaseResult getResult(Collection<TextTransformation> entities) {
-        GetTextTransformationsResult result = CoreResultFactory.getGetTextTransformationsResult();
+        var result = CoreResultFactory.getGetTextTransformationsResult();
         var coreControl = getCoreControl();
-        UserVisit userVisit = getUserVisit();
+        var userVisit = getUserVisit();
         
         result.setTextTransformations(coreControl.getTextTransformationTransfers(userVisit, entities));
         
